fixed overflow

--- a/src/styles/about.scss
+++ b/src/styles/about.scss
@@ -87,7 +87,7 @@
 }
 .skillcol{
     list-style-type: none;
-    padding: 20px;
+    padding: 10px;
 }
 ul{
     padding: 0;
